pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/misplaced_nonlocal1.py
def f():
    nonlocal x
    return x
x = 1
f()